21/09 - Adding staged changes to previous commit

--- a/appendices.tex
+++ b/appendices.tex
@@ -4,16 +4,18 @@
         \acro{rb87}[\(^{87}\)Rb]{Rubidium-87}
         \acro{rb85}[\(^{85}\)Rb]{Rubidium-85}
         \acro{mot}[MOT]{Magneto-optical Trap}
+        \acro{uhv}[UHV]{Ultra-high Vacuum}
         \acro{vsr}[VSR]{Velocity-selective resonance}
         \acro{sdlc}[SDLC]{sub-Doppler laser cooling}
         \acro{aom}[AOM]{Acousto-optic Modulator}
         \acro{eom}[EOM]{Electro-optic Modulator}
+        \acro{neg}[NEG]{Non-evaporative Getter}
         \acro{pm}[PM]{Polarisation-Maintaining}
         \acro{qwp}[QWP]{Quarter-wave Plate}
         \acro{hwp}[HWP]{Half-wave Plate}
         \acro{mfd}[MFD]{Mode Field Diameter}
         \acro{na}[NA]{Numerical Aperture}
-        \acro{ppln}[PPLN]{Periodically Poled Lithium Niobate}
+        \acro{ppln}[PPLN]{Periodically-Poled Lithium Niobate}
         \acro{pll}[PLL]{Phase-Locked Loop}
         \acro{fpga}[FPGA]{Field-Programmable Gate Array}
         \acro{edfa}[EDFA]{Erbium-Doped Fibre Amplifier}
@@ -22,6 +24,7 @@
         \acro{ni}[NI]{National Instruments}
         \acro{daq}[DAQ]{Data Acquisition}
         \acro{vco}[VCO]{Voltage-Controlled Oscillator}
+        \acro{vca}[VCA]{Voltage-Controlled Attenuator}
         \acro{adc}[ADC]{Analogue-to-Digital Converter}
         \acro{dac}[DAC]{Digital-to-Analogue Converter}
         \acro{hal}[HAL]{Hardware Abstraction Layer}
@@ -34,10 +37,11 @@
         \acrodefplural{mots}[MOTs]{Magneto-optical Traps}
         \acro{pbs}[PBS]{Polarising beam-splitter}
         \acro{dro}[DRO]{Dielectric Resonator Oscillator}
-        \acro{nep}[NEP]{noise-equiavlent power}
+        \acro{nep}[NEP]{noise-equivalent power}
     \end{acronym}
 
-
+\chapter{\Muquans Laser Serial
+    Commands}\label{app:serial_commands}
 % \chapter{Laser Systems}\label{chap:setup}
 % This chapter provides a description of the hardware that makes up the experiment. Over the course of the project, the complexity of the experiment necessarily increased. The setup is presented in a bottom-up approach, starting from the most fundamental components, to provide a clear overview of the system. \\
 
