--- a/compcontrol.tex
+++ b/compcontrol.tex
@@ -261,7 +261,7 @@ communication protocol is described in further detail in
 Squared laser, so that it can control all the parameters necessary to drive
 Raman transitions during the experiment. This is done by sending structured
 JSON messages that contain commands to implement this control. More detail on how this is used in the experiment is given in
-\SectionRef{subsuc:msquared_comm}.
+\SectionRef{subsec:msquared_control}.
 \begin{figure}[!htbp]
     \centering
     \fontsize{16pt}{14pt}
