--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -11,10 +11,10 @@
 %% For Cambridge hard-bound version (must be one-sided)
 %\documentclass[hyperpdf,oneside]{hepthesis}
 
-%% Load special font packages here if you wish
+% Load special font packages here if you wish
 
 \include{preamble}
-%\includeonly{interferometry}
+\includeonly{interferometry}
 \makeatother
 %\tikzexternalize
 \begin{document}
@@ -23,12 +23,13 @@
 \end{frontmatter}
 
 \begin{mainmatter}
-    \include{introduction}
+   \include{introduction}
     \include{theory}
     \include{compcontrol}
-   %\include{expsetup}
+  %\include{expsetup}
     \include{mots}
     \include{atompreparation}
+    \include{ramanoptics}
     \include{interferometry}
     \include{conclusion}
     \printbibliography
